--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
   "bugs": {
     "url": "https://github.com/jorgeflores742/webdriverio/issues"
   },
-  "homepage": "https://github.com/jorgeflores742/webdriverio#readme"
+  "homepage": "https://github.com/jorgeflores742/webdriverio#readme",
+  "pepe": "mccry"
 }
